--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         - /:/rootfs:ro
         - /var/run:/var/run:rw
         - /sys:/sys:ro
+        - /var/run/docker.sock:/var/run/docker.sock:rw
         - /var/lib/docker:/var/lib/docker:ro
 
     grafana:
@@ -37,7 +38,7 @@ services:
       links:
         - influxdb:influxsrv
       ports:
-        - "3000:3000"
+        - "3333:3000"
       volumes:
         - ./grafana_data:/var/lib/grafana
       environment:
